feat: add user patch route
