# src/routes/index.ts
@@ -2,5 +2,6 @@
 
 export default {
 	usersGet: async() => (await import('./usersGet')).default,
+	usersPatch: async() => (await import('./usersPatch')).default,
 	usersPost: async() => (await import('./usersPost')).default,
 }
